@@ -1,81 +1,84 @@
-#!/bin/sh
+#!/bin/bash
 
-APP_DIR=/home/kai/seed
-APP_NAME=spring-boot-seed
+AppName=spring-boot-seed
 
-#set java home
-JAVA_HOME=/usr/java/jdk
+#JVM参数
+JVM_OPTS="-Dname=$AppName  -Duser.timezone=Asia/Shanghai -Xms512M -Xmx512M -XX:PermSize=256M -XX:MaxPermSize=512M -XX:+HeapDumpOnOutOfMemoryError -XX:+PrintGCDateStamps  -XX:+PrintGCDetails -XX:NewRatio=1 -XX:SurvivorRatio=30 -XX:+UseParallelGC -XX:+UseParallelOldGC"
 
-usage() {
-    echo "Usage: sh eju-micro-app.sh [start|stop|deploy]"
+if [ "$1" = "" ];
+then
+    echo -e "\033[0;31m 未输入操作名 \033[0m  \033[0;34m {start|stop|restart|status} \033[0m"
     exit 1
+fi
+
+if [ "$AppName" = "" ];
+then
+    echo -e "\033[0;31m 未输入应用名 \033[0m"
+    exit 1
+fi
+
+function start()
+{
+    PID=`ps -ef |grep java|grep $AppName|grep -v grep|awk '{print $2}'`
+
+	if [ x"$PID" != x"" ]; then
+	    echo "$AppName is running..."
+	else
+		nohup java -jar  $JVM_OPTS target/$AppName > /dev/null 2>&1 &
+		echo "Start $AppName success..."
+	fi
 }
 
-kills(){
-    tpid=`ps -ef|grep $APP_NAME|grep -v grep|grep -v kill|awk '{print $2}'`
-    if [[ $tpid ]]; then
-        echo 'Kill Process!'
-        kill -9 $tpid
-    fi
+function stop()
+{
+    echo "Stop $AppName"
+
+	PID=""
+	query(){
+		PID=`ps -ef |grep java|grep $AppName|grep -v grep|awk '{print $2}'`
+	}
+
+	query
+	if [ x"$PID" != x"" ]; then
+		kill -TERM $PID
+		echo "$AppName (pid:$PID) exiting..."
+		while [ x"$PID" != x"" ]
+		do
+			sleep 1
+			query
+		done
+		echo "$AppName exited."
+	else
+		echo "$AppName already stopped."
+	fi
 }
 
-git config --global core.autocrlf
-
-start(){
-    rm -f $APP_DIR/tpid
-    nohup $JAVA_HOME/bin/java -jar -Dspring.profiles.active=dev -Dfile.encoding=UTF-8 $APP_DIR/$APP_NAME.jar > /dev/null 2>&1 &
-    echo $! > $APP_DIR/tpid
-    echo Start Success!
+function restart()
+{
+    stop
+    sleep 2
+    start
 }
 
-stop(){
-        tpid1=`ps -ef|grep $APP_NAME|grep -v grep|grep -v kill|awk '{print $2}'`
-    echo tpid1-$tpid1
-        if [[ $tpid1 ]]; then
-        echo 'Stop Process...'
-        kill -15 $tpid1
-    fi
-    sleep 5
-    tpid2=`ps -ef|grep $APP_NAME|grep -v grep|grep -v kill|awk '{print $2}'`
-        echo tpid2-$tpid2
-    if [[ $tpid2 ]]; then
-        echo 'Kill Process!'
-        kill -9 $tpid2
+function status()
+{
+    PID=`ps -ef |grep java|grep $AppName|grep -v grep|wc -l`
+    if [ $PID != 0 ];then
+        echo "$AppName is running..."
     else
-        echo 'Stop Success!'
-    fi
-
-}
-
-check(){
-    tpid=`ps -ef|grep $APP_NAME|grep -v grep|grep -v kill|awk '{print $2}'`
-    if [[ tpid ]]; then
-        echo 'App is running.'
-    else
-        echo 'App is NOT running.'
+        echo "$AppName is not running..."
     fi
 }
 
-deploy() {
-    kills
-    rm -rf $APP_DIR/$APP_NAME.jar
-    cp $APP_NAME.jar $APP_DIR
-}
-
-case "$1" in
-    "start")
-        start
-        ;;
-    "stop")
-        stop
-        ;;
-    "kill")
-        kills
-        ;;
-    "deploy")
-        deploy
-        ;;
+case $1 in
+    start)
+    start;;
+    stop)
+    stop;;
+    restart)
+    restart;;
+    status)
+    status;;
     *)
-        usage
-        ;;
+
 esac
